# personal-site

./: .gitignore  README.md  main.py  pyproject.toml
.streamlit/: config.toml
src/: app.py  repository.py
src/entities/: education.py  geo.py  metrics.py  papers.py  work.py
