[tool.poetry]
name = "kgrushin-site"
version = "0.1.0"
description = ""
authors = ["Konstantin <k.e.grushin@gmail.com>"]
readme = "README.md"
packages = [{ include = "kgrushin_site" }]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.24.1"
watchdog = "^3.0.0"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
